rename page.css 5

--- a/basics.html
+++ b/basics.html
@@ -593,11 +593,11 @@
                                     <label
                                       class="input-field"
                                       for="submission_city"
-                                      ><div class="_1jn0ze9">
+                                      ><div class="auth-container__form-label">
                                         <div class="spinner-chart__input-title-text">City</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_js9i23">
+                                        <div class="auth-container__form-field-wrapper">
                                           <input
                                             aria-autocomplete="both"
                                             aria-controls="listbox--18"
@@ -626,11 +626,11 @@
                                   data-reach-combobox=""
                                   style="margin-top: 20px"
                                 >
-                                  <div class="_k8r05be">
+                                  <div class="auth-container__form-email-field-wrapper">
                                     <label
                                       class="input-field"
                                       for="submission_city"
-                                      ><div class="_475dd78">
+                                      ><div class="auth-container__form-email-field-content">
                                         <div class="spinner-chart__input-title-text">City</div>
                                       </div>
                                       <div dir="ltr">
@@ -1165,7 +1165,7 @@
               role="group"
               aria-labelledby="additional-languages-group-label"
             >
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ar"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1183,7 +1183,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-az"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1201,7 +1201,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-bg"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1219,7 +1219,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-bs"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1237,7 +1237,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ca"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1255,7 +1255,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-cs"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1273,7 +1273,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-da"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1291,7 +1291,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-de"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1309,7 +1309,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-el"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1327,7 +1327,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-en"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1337,8 +1337,8 @@
                       name="en"
                       class="form__check-input--checked"
                       type="checkbox"
-                      checked="" /><span class="_1v5cvwv4" data-checkbox="true"
-                      ><span class="_1oj8hra"
+                      checked="" /><span class="form__check-input-icon-wrapper" data-checkbox="true"
+                      ><span class="form__check-input-icon"
                         ><svg
                           viewBox="0 0 32 32"
                           xmlns="http://www.w3.org/2000/svg"
@@ -1365,7 +1365,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-es"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1383,7 +1383,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-et"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1401,7 +1401,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-fi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1419,7 +1419,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-fr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1437,7 +1437,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ga"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1455,7 +1455,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-he"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1473,7 +1473,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1491,7 +1491,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1509,7 +1509,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hu"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1527,7 +1527,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hy"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1545,7 +1545,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-id"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1563,7 +1563,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-is"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1581,7 +1581,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-it"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1599,7 +1599,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ja"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1617,7 +1617,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ka"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1635,7 +1635,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ko"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1653,7 +1653,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-lt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1671,7 +1671,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-lv"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1689,7 +1689,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-mk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1707,7 +1707,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ms"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1725,7 +1725,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-mt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1743,7 +1743,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-nl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1761,7 +1761,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-no"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1779,7 +1779,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-pl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1797,7 +1797,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-pt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1815,7 +1815,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ro"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1833,7 +1833,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ru"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1851,7 +1851,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1869,7 +1869,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1887,7 +1887,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sq"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1905,7 +1905,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1923,7 +1923,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sv"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1941,7 +1941,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sw"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1959,7 +1959,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-th"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1977,7 +1977,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-tl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1995,7 +1995,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-tr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2013,7 +2013,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-uk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2031,7 +2031,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-vi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2049,7 +2049,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-xh"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2067,7 +2067,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zh"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2085,7 +2085,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zh-TW"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2103,7 +2103,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zu"
                   ><span class="explore-filter-menu__list-content"
                     ><input
