--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -553,9 +553,9 @@
                                         id="new-listing-promotion-row-checkbox"
                                         class="form__check-input--checked"
                                         checked="" /><span
-                                        class="_1v5cvwv4"
+                                        class="form__check-input-icon-wrapper"
                                         data-checkbox="true"
-                                        ><span class="_1oj8hra"
+                                        ><span class="form__check-input-icon"
                                           ><svg
                                             viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg"
