--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -415,7 +415,7 @@
                                 data-section-id="FORM"
                                 style="padding-top: 16px; padding-bottom: 124px"
                               >
-                                <div class="c14z17by dir dir-ltr">
+                                <div class="guest-container__form-wrapper dir dir-ltr">
                                   <div class="flex-before-after dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
@@ -461,7 +461,7 @@
                                               </select>
                                             </div></label
                                           >
-                                          <div class="_1poxnz2">
+                                          <div class="guest-container__selector-icon-wrapper">
                                             <svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -756,7 +756,7 @@
                                             <button
                                               role="radio"
                                               title="Light"
-                                              class="_1h0bjrrv"
+                                              class="getting_set_up_improvement_btn"
                                               aria-checked="true"
                                               type="button"
                                             >
@@ -836,7 +836,7 @@
                                             <button
                                               role="radio"
                                               title="Beginner"
-                                              class="_1h0bjrrv"
+                                              class="getting_set_up_improvement_btn"
                                               aria-checked="true"
                                               type="button"
                                             >
