--- a/forgot_password.html
+++ b/forgot_password.html
@@ -49,9 +49,9 @@
                   <div class="page-shell">
                     <div class="hidden block-md"></div>
                     <main id="site-content">
-                      <div class="_qrzeuh" role="group">
-                        <div class="_1y9y8er">
-                          <header id="panel-header" data-testid="panel-header" class="_fmle54"><button
+                      <div class="auth-container" role="group">
+                        <div class="auth-container__wrapper">
+                          <header id="panel-header" data-testid="panel-header" class="auth-container__header"><button
                               data-testid="panel-header-button" aria-label="Back" role="button" type="button"
                               class="account-container-mb__menu-btn"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                 aria-hidden="true" role="presentation" focusable="false"
@@ -63,26 +63,26 @@
                                 </g>
                               </svg></button>
                             <section>
-                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                              <h2 tabindex="-1" class="auth-container__forgot-text" elementtiming="LCP-target">
                                 <div class="_1tpjx2u">Forgot password?</div>
                               </h2>
                             </section>
-                            <div class="_2ftibv"></div>
+                            <div class="auth-container__header-spacer"></div>
                           </header>
-                          <div class="_7lvai1" aria-labelledby="panel-header">
+                          <div class="auth-container__panel-header" aria-labelledby="panel-header">
                             <div data-testid="forgot-password-pane">
-                              <div class="_13a5kt53">Enter the email address associated with your account, and we’ll
+                              <div class="auth-container__panel-forgot-pane">Enter the email address associated with your account, and we’ll
                                 email you a link to reset your password.</div>
                               <form action="/forgot_password_api" method="POST" novalidate="" data-testid="auth-form">
                                 <input type="hidden" name="authenticity_token"
                                   value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                 <div>
-                                  <div class="_1jj61m9"><label class="_1yw7hpv" for="forgot-password-email">
-                                      <div class="_1jn0ze9">
-                                        <div class="_11hx67x">Email</div>
+                                  <div class="auth-container__form-email-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                      <div class="auth-container__form-label">
+                                        <div class="auth-container__form-label-text">Email</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_js9i23"><input placeholder="Email" name="EmailField"
+                                        <div class="auth-container__form-field-wrapper"><input placeholder="Email" name="EmailField"
                                             data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" autocomplete="off" inputmode="email" type="email"
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
@@ -91,12 +91,12 @@
                                   <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
-                                  <div class="_k8r05be"><label class="_1yw7hpv" for="forgot-password-email">
-                                      <div class="_475dd78">
-                                        <div class="_11hx67x">Email</div>
+                                  <div class="auth-container__form-email-field-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                      <div class="auth-container__form-email-field-content">
+                                        <div class="auth-container__form-label-text">Email</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_fywymp7"><input type="email" placeholder="Email" name="EmailField"
+                                        <div class="auth-container__form-email-field-input"><input type="email" placeholder="Email" name="EmailField"
                                             data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" value="" autocomplete="off" inputmode="email"
                                             aria-describedby="forgot-password-email-InputField-help"
@@ -116,7 +116,7 @@
                                         </svg></span>Email is required.</div>
                                   </div>
                                 </div>
-                                <div class="_1lftqm5">
+                                <div class="auth-container__reset-btn">
                                   <div id="airlock-inline-container" aria-live="polite"></div>
                                 </div><button data-testid="forgot-password-button" type="submit" class="btn-dark w-full">Send
                                   reset link</button>
@@ -306,9 +306,9 @@
                       </div>
                     </div>
                     <main id="site-content">
-                      <div class="_qrzeuh" role="group">
-                        <div class="_1y9y8er">
-                          <header id="panel-header" data-testid="panel-header" class="_fmle54"><button
+                      <div class="auth-container" role="group">
+                        <div class="auth-container__wrapper">
+                          <header id="panel-header" data-testid="panel-header" class="auth-container__header"><button
                               data-testid="panel-header-button" aria-label="Back" role="button" type="button"
                               class="account-container-mb__menu-btn"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                 aria-hidden="true" role="presentation" focusable="false"
@@ -320,26 +320,26 @@
                                 </g>
                               </svg></button>
                             <section>
-                              <h2 tabindex="-1" class="_14i3z6h" elementtiming="LCP-target">
+                              <h2 tabindex="-1" class="auth-container__forgot-text" elementtiming="LCP-target">
                                 <div class="_1tpjx2u">Forgot password?</div>
                               </h2>
                             </section>
-                            <div class="_2ftibv"></div>
+                            <div class="auth-container__header-spacer"></div>
                           </header>
-                          <div class="_7lvai1" aria-labelledby="panel-header">
+                          <div class="auth-container__panel-header" aria-labelledby="panel-header">
                             <div data-testid="forgot-password-pane">
-                              <div class="_13a5kt53">Enter the email address associated with your account, and we’ll
+                              <div class="auth-container__panel-forgot-pane">Enter the email address associated with your account, and we’ll
                                 email you a link to reset your password.</div>
                               <form action="/forgot_password_api" method="POST" novalidate="" data-testid="auth-form">
                                 <input type="hidden" name="authenticity_token"
                                   value="V4$.airbnb.com$h9wEdlWpWFY$9FY6YPDG-paYH_6LhSHJnXS_WyCpOvzJNBLG_sgWer8=">
                                 <div>
-                                  <div class="_1jj61m9"><label class="_1yw7hpv" for="forgot-password-email">
-                                      <div class="_1jn0ze9">
-                                        <div class="_11hx67x">Email</div>
+                                  <div class="auth-container__form-email-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                      <div class="auth-container__form-label">
+                                        <div class="auth-container__form-label-text">Email</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_js9i23"><input placeholder="Email" name="EmailField"
+                                        <div class="auth-container__form-field-wrapper"><input placeholder="Email" name="EmailField"
                                             data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" autocomplete="off" inputmode="email" type="email"
                                             aria-describedby="forgot-password-email-InputField-help" value=""></div>
@@ -348,12 +348,12 @@
                                   <div class="place__recommended-no"></div>
                                 </div>
                                 <div>
-                                  <div class="_k8r05be"><label class="_1yw7hpv" for="forgot-password-email">
-                                      <div class="_475dd78">
-                                        <div class="_11hx67x">Email</div>
+                                  <div class="auth-container__form-email-field-wrapper"><label class="_1yw7hpv" for="forgot-password-email">
+                                      <div class="auth-container__form-email-field-content">
+                                        <div class="auth-container__form-label-text">Email</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_fywymp7"><input type="email" placeholder="Email" name="EmailField"
+                                        <div class="auth-container__form-email-field-input"><input type="email" placeholder="Email" name="EmailField"
                                             data-testid="forgot-password-email" class="form__input"
                                             id="forgot-password-email" value="" autocomplete="off" inputmode="email"
                                             aria-describedby="forgot-password-email-InputField-help"
@@ -373,7 +373,7 @@
                                         </svg></span>Email is required.</div>
                                   </div>
                                 </div>
-                                <div class="_1lftqm5">
+                                <div class="auth-container__reset-btn">
                                   <div id="airlock-inline-container" aria-live="polite"></div>
                                 </div><button data-testid="forgot-password-button" type="submit" class="btn-dark w-full">Send
                                   reset link</button>
