--- a/invite-friends.html
+++ b/invite-friends.html
@@ -178,7 +178,7 @@
                   </div>
                 </main>
                 <div style="margin-top: 16px; margin-bottom: 16px">
-                  <div class="_7qp4lh"></div>
+                  <div class="b-divider"></div>
                 </div>
                 <div class="_1ixo0nt">
                   <div class="account-container__menu-container">
