--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -2243,7 +2243,7 @@
                       <div class="mbv7i5o dir dir-ltr">
                         <h2
                           tabindex="-1"
-                          class="_14i3z6h"
+                          class="auth-container__forgot-text"
                           elementtiming="LCP-target"
                         >
                           <div class="hk7fm8a dir dir-ltr">
@@ -2311,13 +2311,13 @@
                       </div>
                     </div>
                     <div class="_v0ipn8">
-                      <div class="_1jj61m9">
+                      <div class="auth-container__form-email-wrapper">
                         <label class="_1yw7hpv" for="zipCode"
-                          ><div class="_1jn0ze9">
-                            <div class="_11hx67x">ZIP code</div>
+                          ><div class="auth-container__form-label">
+                            <div class="auth-container__form-label-text">ZIP code</div>
                           </div>
                           <div dir="ltr">
-                            <div class="_js9i23">
+                            <div class="auth-container__form-field-wrapper">
                               <input
                                 name="zipCode"
                                 errormessage=""
@@ -2334,13 +2334,13 @@
                       </div>
                     </div>
                     <div class="_v0ipn8">
-                      <div class="_k8r05be">
+                      <div class="auth-container__form-email-field-wrapper">
                         <label class="_1yw7hpv" for="zipCode"
-                          ><div class="_475dd78">
-                            <div class="_11hx67x">ZIP code</div>
+                          ><div class="auth-container__form-email-field-content">
+                            <div class="auth-container__form-label-text">ZIP code</div>
                           </div>
                           <div dir="ltr">
-                            <div class="_fywymp7">
+                            <div class="auth-container__form-email-field-input">
                               <input
                                 name="zipCode"
                                 ariadescribedby="credit-card-zip-error"
@@ -2383,7 +2383,7 @@
                     <div class="_14yb6ke" role="button" tabindex="0">
                       <label for="billing_country_selector" class="_13kgb0p"
                         ><div class="_zhftk97">
-                          <div class="_11hx67x">Country/region</div>
+                          <div class="auth-container__form-label-text">Country/region</div>
                         </div>
                         <div class="_1ekxhnk" id="billing_country_selector">
                           Philippines
