--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -285,7 +285,7 @@
                                                   margin-bottom: 48px;
                                                 "
                                               >
-                                                <div class="_7qp4lh"></div>
+                                                <div class="b-divider"></div>
                                               </div>
                                               <section>
                                                 <div class="tax-info__header-h1">
@@ -716,7 +716,7 @@
                                                   margin-bottom: 48px;
                                                 "
                                               >
-                                                <div class="_7qp4lh"></div>
+                                                <div class="b-divider"></div>
                                               </div>
                                               <section>
                                                 <div class="tax-info__header-h1">
