--- a/payments/your-payments.html
+++ b/payments/your-payments.html
@@ -245,7 +245,7 @@
                                               >
                                                 <h2
                                                   tabindex="-1"
-                                                  class="_14i3z6h"
+                                                  class="auth-container__forgot-text"
                                                   elementtiming="LCP-target"
                                                 >
                                                   Your payments
@@ -277,7 +277,7 @@
                                             <section>
                                               <h2
                                                 tabindex="-1"
-                                                class="_14i3z6h"
+                                                class="auth-container__forgot-text"
                                                 elementtiming="LCP-target"
                                               >
                                                 <div
@@ -737,7 +737,7 @@
                                                 >
                                                   <h2
                                                     tabindex="-1"
-                                                    class="_14i3z6h"
+                                                    class="auth-container__forgot-text"
                                                     elementtiming="LCP-target"
                                                   >
                                                     Your payments
@@ -762,7 +762,7 @@
                                               <section>
                                                 <h2
                                                   tabindex="-1"
-                                                  class="_14i3z6h"
+                                                  class="auth-container__forgot-text"
                                                   elementtiming="LCP-target"
                                                 >
                                                   <div
