--- a/professional-hosting.html
+++ b/professional-hosting.html
@@ -290,7 +290,7 @@
                                   </div>
                                   <div style="margin-top: 8px">
                                     <div class="card-alt-2__text">
-                                      <div class="_17j792vp">
+                                      <div class="main-content__header-ignore-note">
                                         Edit your company info and manage your
                                         listings at scale
                                       </div>
@@ -318,7 +318,7 @@
                                           style="margin-top: 4px"
                                         >
                                           <div class="card-alt-2__text">
-                                            <div class="_17j792vp">
+                                            <div class="main-content__header-ignore-note">
                                               I attest that I will use the email
                                               alias only for the following
                                               reasons:
@@ -690,7 +690,7 @@
                                       </div>
                                       <div style="margin-top: 8px">
                                         <div class="card-alt-2__text">
-                                          <div class="_17j792vp">
+                                          <div class="main-content__header-ignore-note">
                                             Edit your company info and manage
                                             your listings at scale
                                           </div>
@@ -718,7 +718,7 @@
                                               style="margin-top: 4px"
                                             >
                                               <div class="card-alt-2__text">
-                                                <div class="_17j792vp">
+                                                <div class="main-content__header-ignore-note">
                                                   I attest that I will use the
                                                   email alias only for the
                                                   following reasons:
