--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -729,7 +729,7 @@
                   <div>
                     <div class="footer-hr-xl">
                       <div style="margin-top: 16px; margin-bottom: 16px">
-                        <div class="_7qp4lh"></div>
+                        <div class="b-divider"></div>
                       </div>
                     </div>
                     <div class="table-container">
