--- a/reviews.html
+++ b/reviews.html
@@ -1166,7 +1166,7 @@
                                       <button
                                         id="getting_set_up_improvement_tag"
                                         name="getting_set_up_improvement_tag"
-                                        class="_1h0bjrrv"
+                                        class="getting_set_up_improvement_btn"
                                         aria-pressed="false"
                                         type="button"
                                       >
