--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1072,7 +1072,7 @@
                                 What time would you typically start your
                                 experience?
                               </div>
-                              <div class="_17j792vp">
+                              <div class="main-content__header-ignore-note">
                                 Later on, you’ll pick the exact calendar dates
                                 you’d like to host. You’ll also be able to
                                 adjust times for each individual date.
@@ -1088,12 +1088,12 @@
                                   </div></label
                                 >
                               </div>
-                              <div class="_wlf6154">
+                              <div class="select-option__container">
                                 <div class="overflow-hidden">
                                   <select
                                     id="experience_default_time"
                                     name="experience_default_time"
-                                    class="_1w9nn735"
+                                    class="select-option__container-select"
                                   >
                                     <option value="0">12:00 AM</option>
                                     <option value="30">12:30 AM</option>
@@ -1145,7 +1145,7 @@
                                     <option value="1410">11:30 PM</option>
                                   </select>
                                 </div>
-                                <span class="_1idvclr"
+                                <span class="select-option__container-select-icon"
                                   ><svg
                                     viewBox="0 0 18 18"
                                     role="presentation"
@@ -1314,7 +1314,7 @@
                       </div>
                       <div class="_c143gl" tabindex="0" aria-label="Tips">
                         <div class="_1loiqjs">
-                          <div class="_gewmsg">
+                          <div class="guest-container__text-header">
                             Popular start times for guests around the world
                             based on bookings in the last 14 days
                           </div>
