--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1074,7 +1074,7 @@
                               </section>
                             </div>
                             <div>
-                              <div class="_1m26oin">
+                              <div class="site-content__content-wrapper-h2-wrapper">
                                 <div class="_1f90wx">
                                   <div class="_j69sjg">Public groups</div>
                                   <div class="form-floating">
@@ -1137,7 +1137,7 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="_1m26oin">
+                              <div class="site-content__content-wrapper-h2-wrapper">
                                 <div class="_1f90wx">
                                   <div class="_j69sjg">Private groups</div>
                                   <div class="form-floating">
