--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1218,7 +1218,7 @@
                                     ></path>
                                   </svg>
                                 </span>
-                                <div class="_1kfl0pr">
+                                <div class="inbox-container__message-btn-close">
                                   <span class="explore-filter"
                                     >43% of Online Experiences are priced
                                     between ₹793 and ₹1,506. The median price of
@@ -1263,17 +1263,17 @@
                               </div>
                             </div>
                             <div class="_5qlqom">
-                              <section class="_d747d">
+                              <section class="pb-24">
                                 <h2
                                   tabindex="-1"
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_syd9hu"
+                                  <span class="site-content__content-wrapper-h2-text"
                                     >Per instance: Private groups</span
                                   >
                                 </h2>
-                                <p class="_1te0xf7">
+                                <p class="site-content__content-wrapper-desc">
                                   If no other seats are taken, guests can book
                                   an instance for a private group.
                                 </p>
@@ -1384,7 +1384,7 @@
                                   class="heading"
                                   elementtiming="LCP-target"
                                 >
-                                  <span class="_syd9hu"
+                                  <span class="site-content__content-wrapper-h2-text"
                                     >Access providers for guests with
                                     disabilities</span
                                   >
@@ -1491,7 +1491,7 @@
                       <div class="_c143gl" tabindex="0" aria-label="Tips">
                         <div class="_1loiqjs">
                           <h3 class="_f68iwe">Your potential earnings</h3>
-                          <h4 class="_gewmsg">Public groups</h4>
+                          <h4 class="guest-container__text-header">Public groups</h4>
                           <div class="_1htwqzi">
                             <div class="_r8kijh">
                               <div
@@ -1569,7 +1569,7 @@
                               </div>
                             </div>
                           </div>
-                          <h4 class="_gewmsg">Private groups</h4>
+                          <h4 class="guest-container__text-header">Private groups</h4>
                           <div class="_1htwqzi">
                             <div class="hero-banner__description">
                               If 5 adults are in a group, you will earn ₹98.40
