--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1076,11 +1076,11 @@
                                     <label
                                       class="input-field"
                                       for="submission_city"
-                                      ><div class="_1jn0ze9">
+                                      ><div class="auth-container__form-label">
                                         <div class="spinner-chart__input-title-text">City</div>
                                       </div>
                                       <div dir="ltr">
-                                        <div class="_js9i23">
+                                        <div class="auth-container__form-field-wrapper">
                                           <input
                                             aria-autocomplete="both"
                                             aria-controls="listbox--18"
@@ -1584,7 +1584,7 @@
               role="group"
               aria-labelledby="additional-languages-group-label"
             >
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ar"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1602,7 +1602,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-az"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1620,7 +1620,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-bg"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1638,7 +1638,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-bs"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1656,7 +1656,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ca"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1674,7 +1674,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-cs"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1692,7 +1692,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-da"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1710,7 +1710,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-de"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1728,7 +1728,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-el"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1746,7 +1746,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-en"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1756,8 +1756,8 @@
                       name="en"
                       class="form__check-input--checked"
                       type="checkbox"
-                      checked="" /><span class="_1v5cvwv4" data-checkbox="true"
-                      ><span class="_1oj8hra"
+                      checked="" /><span class="form__check-input-icon-wrapper" data-checkbox="true"
+                      ><span class="form__check-input-icon"
                         ><svg
                           viewBox="0 0 32 32"
                           xmlns="http://www.w3.org/2000/svg"
@@ -1784,7 +1784,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-es"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1802,7 +1802,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-et"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1820,7 +1820,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-fi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1838,7 +1838,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-fr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1856,7 +1856,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ga"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1874,7 +1874,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-he"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1892,7 +1892,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1910,7 +1910,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1928,7 +1928,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hu"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1946,7 +1946,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-hy"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1964,7 +1964,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-id"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -1982,7 +1982,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-is"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2000,7 +2000,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-it"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2018,7 +2018,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ja"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2036,7 +2036,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ka"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2054,7 +2054,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ko"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2072,7 +2072,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-lt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2090,7 +2090,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-lv"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2108,7 +2108,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-mk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2126,7 +2126,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ms"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2144,7 +2144,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-mt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2162,7 +2162,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-nl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2180,7 +2180,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-no"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2198,7 +2198,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-pl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2216,7 +2216,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-pt"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2234,7 +2234,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ro"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2252,7 +2252,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-ru"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2270,7 +2270,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2288,7 +2288,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2306,7 +2306,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sq"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2324,7 +2324,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2342,7 +2342,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sv"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2360,7 +2360,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-sw"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2378,7 +2378,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-th"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2396,7 +2396,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-tl"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2414,7 +2414,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-tr"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2432,7 +2432,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-uk"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2450,7 +2450,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-vi"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2468,7 +2468,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-xh"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2486,7 +2486,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zh"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2504,7 +2504,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zh-TW"
                   ><span class="explore-filter-menu__list-content"
                     ><input
@@ -2522,7 +2522,7 @@
                   ></label
                 >
               </div>
-              <div class="_ujw9ii">
+              <div class="py-12 flex-50">
                 <label class="flex dir dir-ltr" for="checkbox-zu"
                   ><span class="explore-filter-menu__list-content"
                     ><input
