--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1080,12 +1080,12 @@
                                     advance any new guests can book.
                                   </div>
                                 </div>
-                                <div class="_wlf6154">
+                                <div class="select-option__container">
                                   <div class="overflow-hidden">
                                     <select
                                       id="trip_template_confirmed_booking_lead_hours"
                                       name="trip_template_confirmed_booking_lead_hours"
-                                      class="_1w9nn735"
+                                      class="select-option__container-select"
                                     >
                                       <option value="0">
                                         0 hours before start time
@@ -1137,7 +1137,7 @@
                                       </option>
                                     </select>
                                   </div>
-                                  <span class="_1idvclr"
+                                  <span class="select-option__container-select-icon"
                                     ><svg
                                       viewBox="0 0 18 18"
                                       role="presentation"
@@ -1204,12 +1204,12 @@
                                     instance won't be available to guests.
                                   </div>
                                 </div>
-                                <div class="_wlf6154">
+                                <div class="select-option__container">
                                   <div class="overflow-hidden">
                                     <select
                                       id="trip_template_booking_lead_hours"
                                       name="trip_template_booking_lead_hours"
-                                      class="_1w9nn735"
+                                      class="select-option__container-select"
                                     >
                                       <option value="1">
                                         1 hour before start time
@@ -1258,7 +1258,7 @@
                                       </option>
                                     </select>
                                   </div>
-                                  <span class="_1idvclr"
+                                  <span class="select-option__container-select-icon"
                                     ><svg
                                       viewBox="0 0 18 18"
                                       role="presentation"
