--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1099,7 +1099,7 @@
                                   being specific and listing each item
                                   separately.
                                 </p>
-                                <div class="_d747d">
+                                <div class="pb-24">
                                   <div class="_1sxghm1">
                                     <div class="spinner-chart__input-price">
                                       <label
