--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1093,7 +1093,7 @@
                                       margin-bottom: 24px;
                                     "
                                   >
-                                    <div class="_7qp4lh"></div>
+                                    <div class="b-divider"></div>
                                   </div>
                                 </div>
                                 <div>
