--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1061,16 +1061,16 @@
                               </section>
                             </div>
                             <div>
-                              <div class="_1m26oin">
-                                <section class="_d747d">
+                              <div class="site-content__content-wrapper-h2-wrapper">
+                                <section class="pb-24">
                                   <h2
                                     tabindex="-1"
                                     class="heading"
                                     elementtiming="LCP-target"
                                   >
-                                    <span class="_syd9hu">Group rates</span>
+                                    <span class="site-content__content-wrapper-h2-text">Group rates</span>
                                   </h2>
-                                  <p class="_1te0xf7">
+                                  <p class="site-content__content-wrapper-desc">
                                     Add discounts for different group sizes.
                                     Discounts apply to all paying guests,
                                     including children and infants.
