--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1106,7 +1106,7 @@
                                       </select>
                                     </div></label
                                   >
-                                  <div class="_1poxnz2">
+                                  <div class="guest-container__selector-icon-wrapper">
                                     <svg
                                       viewBox="0 0 32 32"
                                       xmlns="http://www.w3.org/2000/svg"
@@ -1334,7 +1334,7 @@
                                   <div class="_1scyp6q">
                                     <button
                                       data-testid="Tag:4605"
-                                      class="_1h0bjrrv"
+                                      class="getting_set_up_improvement_btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="true"
@@ -1410,7 +1410,7 @@
                                   <div class="_1scyp6q">
                                     <button
                                       data-testid="Tag:4790"
-                                      class="_1h0bjrrv"
+                                      class="getting_set_up_improvement_btn"
                                       role="radio"
                                       aria-invalid="false"
                                       aria-checked="true"
