--- a/transaction_history.html
+++ b/transaction_history.html
@@ -633,19 +633,19 @@
                                             <div class="_j6urmsh">
                                               <div class="relative">
                                                 <div class="hero-banner__label-wrapper">
-                                                  <div class="_wlf6154">
+                                                  <div class="select-option__container">
                                                     <div class="overflow-hidden">
                                                       <select
                                                         id="payout-method-select"
                                                         name="payout-method-select"
-                                                        class="_1w9nn735"
+                                                        class="select-option__container-select"
                                                       >
                                                         <option value="-1">
                                                           All Payout Methods
                                                         </option>
                                                       </select>
                                                     </div>
-                                                    <span class="_1idvclr"
+                                                    <span class="select-option__container-select-icon"
                                                       ><svg
                                                         viewBox="0 0 18 18"
                                                         role="presentation"
@@ -671,12 +671,12 @@
                                             <div class="_j6urmsh">
                                               <div class="relative">
                                                 <div class="hero-banner__label-wrapper">
-                                                  <div class="_wlf6154">
+                                                  <div class="select-option__container">
                                                     <div class="overflow-hidden">
                                                       <select
                                                         id="listings-select"
                                                         name="listings-select"
-                                                        class="_1w9nn735"
+                                                        class="select-option__container-select"
                                                       >
                                                         <option value="-1">
                                                           All Listings
@@ -694,7 +694,7 @@
                                                         </optgroup>
                                                       </select>
                                                     </div>
-                                                    <span class="_1idvclr"
+                                                    <span class="select-option__container-select-icon"
                                                       ><svg
                                                         viewBox="0 0 18 18"
                                                         role="presentation"
@@ -735,7 +735,7 @@
                                                           >Filter Start
                                                           Month</label
                                                         >
-                                                        <div class="_wlf6154">
+                                                        <div class="select-option__container">
                                                           <div class="_16i0gg4">
                                                             From:
                                                           </div>
@@ -743,7 +743,7 @@
                                                             <select
                                                               id="filter-start-month-select"
                                                               name="filter-start-month-select"
-                                                              class="_1w9nn735"
+                                                              class="select-option__container-select"
                                                             >
                                                               <option value="0">
                                                                 January
@@ -787,7 +787,7 @@
                                                               </option>
                                                             </select>
                                                           </div>
-                                                          <span class="_1idvclr"
+                                                          <span class="select-option__container-select-icon"
                                                             ><svg
                                                               viewBox="0 0 18 18"
                                                               role="presentation"
@@ -821,12 +821,12 @@
                                                           >Filter Start
                                                           Year</label
                                                         >
-                                                        <div class="_wlf6154">
+                                                        <div class="select-option__container">
                                                           <div class="overflow-hidden">
                                                             <select
                                                               id="filter-start-year-select"
                                                               name="filter-start-year-select"
-                                                              class="_1w9nn735"
+                                                              class="select-option__container-select"
                                                             >
                                                               <option
                                                                 value="2008"
@@ -905,7 +905,7 @@
                                                               </option>
                                                             </select>
                                                           </div>
-                                                          <span class="_1idvclr"
+                                                          <span class="select-option__container-select-icon"
                                                             ><svg
                                                               viewBox="0 0 18 18"
                                                               role="presentation"
@@ -949,7 +949,7 @@
                                                           >Filter End
                                                           Month</label
                                                         >
-                                                        <div class="_wlf6154">
+                                                        <div class="select-option__container">
                                                           <div class="_16i0gg4">
                                                             To:
                                                           </div>
@@ -957,7 +957,7 @@
                                                             <select
                                                               id="filter-end-month-select"
                                                               name="filter-end-month-select"
-                                                              class="_1w9nn735"
+                                                              class="select-option__container-select"
                                                             >
                                                               <option value="0">
                                                                 January
@@ -1001,7 +1001,7 @@
                                                               </option>
                                                             </select>
                                                           </div>
-                                                          <span class="_1idvclr"
+                                                          <span class="select-option__container-select-icon"
                                                             ><svg
                                                               viewBox="0 0 18 18"
                                                               role="presentation"
@@ -1035,12 +1035,12 @@
                                                           >Filter End
                                                           Year</label
                                                         >
-                                                        <div class="_wlf6154">
+                                                        <div class="select-option__container">
                                                           <div class="overflow-hidden">
                                                             <select
                                                               id="filter-end-year-select"
                                                               name="filter-end-year-select"
-                                                              class="_1w9nn735"
+                                                              class="select-option__container-select"
                                                             >
                                                               <option
                                                                 value="2008"
@@ -1119,7 +1119,7 @@
                                                               </option>
                                                             </select>
                                                           </div>
-                                                          <span class="_1idvclr"
+                                                          <span class="select-option__container-select-icon"
                                                             ><svg
                                                               viewBox="0 0 18 18"
                                                               role="presentation"
