--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -230,9 +230,9 @@
                                           id="SURVEILLANCE-row-checkbox"
                                           class="form__check-input--checked"
                                           checked="" /><span
-                                          class="_1v5cvwv4"
+                                          class="form__check-input-icon-wrapper"
                                           data-checkbox="true"
-                                          ><span class="_1oj8hra"
+                                          ><span class="form__check-input-icon"
                                             ><svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
