--- a/edit/title.html
+++ b/edit/title.html
@@ -413,7 +413,7 @@
                                 data-section-id="FORM"
                                 style="padding-top: 16px; padding-bottom: 129px"
                               >
-                                <div class="c14z17by dir dir-ltr">
+                                <div class="guest-container__form-wrapper dir dir-ltr">
                                   <div class="flex-before-after dir dir-ltr">
                                     <div style="--gp-section-max-width: 1120px">
                                       <div
