--- a/gift.html
+++ b/gift.html
@@ -232,11 +232,11 @@
                                   <div>
                                     <div class="spinner-chart__input-price">
                                       <label class="input-field" for="gift_pin">
-                                        <div class="_1jn0ze9">
+                                        <div class="auth-container__form-label">
                                           <div class="spinner-chart__input-title-text">PIN</div>
                                         </div>
                                         <div dir="ltr">
-                                          <div class="_js9i23">
+                                          <div class="auth-container__form-field-wrapper">
                                             <input
                                               type="text"
                                               name="gift_pin"
@@ -320,7 +320,7 @@
                                         you didn’t enter the gift card number.
                                       </div>
                                     </div>
-                                    <div class="_1kfl0pr">
+                                    <div class="inbox-container__message-btn-close">
                                       <button
                                         aria-label="Close"
                                         data-testid=""
