--- a/payments/payment-form.html
+++ b/payments/payment-form.html
@@ -22,7 +22,7 @@
                     <label class="_d1user" for="credit-card-number"
                       ><div class="_4lkhlg">
                         <div class="_sq30th">
-                          <div class="_11hx67x">
+                          <div class="auth-container__form-label-text">
                             Card number
                             <div class="_2th4fm">
                               <svg
@@ -45,7 +45,7 @@
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_js9i23">
+                        <div class="auth-container__form-field-wrapper">
                           <input
                             name="credit-card-number"
                             autocomplete="off"
@@ -82,11 +82,11 @@
                     <label class="_d1user" for="credit-card-expiration"
                       ><div class="_4lkhlg">
                         <div class="_sq30th">
-                          <div class="_11hx67x">Expiration</div>
+                          <div class="auth-container__form-label-text">Expiration</div>
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_js9i23">
+                        <div class="auth-container__form-field-wrapper">
                           <input
                             name="credit-card-expiration"
                             autocomplete="off"
@@ -120,11 +120,11 @@
                     <label class="_d1user" for="credit-card-cvv"
                       ><div class="_4lkhlg">
                         <div class="_sq30th">
-                          <div class="_11hx67x">CVV</div>
+                          <div class="auth-container__form-label-text">CVV</div>
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_js9i23">
+                        <div class="auth-container__form-field-wrapper">
                           <input
                             name="credit-card-cvv"
                             autocomplete="off"
@@ -165,7 +165,7 @@
                     <label class="_d1user" for="credit-card-number"
                       ><div class="_1526jyed">
                         <div class="_sq30th">
-                          <div class="_11hx67x">
+                          <div class="auth-container__form-label-text">
                             Card number
                             <div class="_2th4fm">
                               <svg
@@ -258,11 +258,11 @@
                     <label class="_d1user" for="credit-card-expiration"
                       ><div class="_1u8uzggd">
                         <div class="_sq30th">
-                          <div class="_11hx67x">Expiration</div>
+                          <div class="auth-container__form-label-text">Expiration</div>
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_fywymp7">
+                        <div class="auth-container__form-email-field-input">
                           <input
                             name="credit-card-expiration"
                             autocomplete="off"
@@ -296,11 +296,11 @@
                     <label class="_d1user" for="credit-card-cvv"
                       ><div class="_1u8uzggd">
                         <div class="_sq30th">
-                          <div class="_11hx67x">CVV</div>
+                          <div class="auth-container__form-label-text">CVV</div>
                         </div>
                       </div>
                       <div dir="ltr">
-                        <div class="_fywymp7">
+                        <div class="auth-container__form-email-field-input">
                           <input
                             name="credit-card-cvv"
                             autocomplete="off"
