--- a/preferences.html
+++ b/preferences.html
@@ -349,12 +349,12 @@
                                               for="preferred_locale"
                                               >Preferred language</label
                                             >
-                                            <div class="_wlf6154">
+                                            <div class="select-option__container">
                                               <div class="overflow-hidden">
                                                 <select
                                                   id="preferred_locale"
                                                   name="preferred_locale"
-                                                  class="_1w9nn735"
+                                                  class="select-option__container-select"
                                                 >
                                                   <option disabled="" value="">
                                                     Choose...
@@ -544,7 +544,7 @@
                                                   </option>
                                                 </select>
                                               </div>
-                                              <span class="_1idvclr"
+                                              <span class="select-option__container-select-icon"
                                                 ><svg
                                                   viewBox="0 0 18 18"
                                                   role="presentation"
@@ -824,12 +824,12 @@
                                               for="native_currency"
                                               >Preferred currency</label
                                             >
-                                            <div class="_wlf6154">
+                                            <div class="select-option__container">
                                               <div class="overflow-hidden">
                                                 <select
                                                   id="native_currency"
                                                   name="native_currency"
-                                                  class="_1w9nn735"
+                                                  class="select-option__container-select"
                                                 >
                                                   <option disabled="" value="">
                                                     Choose...
@@ -953,7 +953,7 @@
                                                   </option>
                                                 </select>
                                               </div>
-                                              <span class="_1idvclr"
+                                              <span class="select-option__container-select-icon"
                                                 ><svg
                                                   viewBox="0 0 18 18"
                                                   role="presentation"
@@ -1057,12 +1057,12 @@
                                             <label class="new-arrow-underscore" for="timezone"
                                               >Time zone</label
                                             >
-                                            <div class="_wlf6154">
+                                            <div class="select-option__container">
                                               <div class="overflow-hidden">
                                                 <select
                                                   id="timezone"
                                                   name="timezone"
-                                                  class="_1w9nn735"
+                                                  class="select-option__container-select"
                                                 >
                                                   <option disabled="" value="">
                                                     Choose...
@@ -1695,7 +1695,7 @@
                                                   </option>
                                                 </select>
                                               </div>
-                                              <span class="_1idvclr"
+                                              <span class="select-option__container-select-icon"
                                                 ><svg
                                                   viewBox="0 0 18 18"
                                                   role="presentation"
@@ -2058,12 +2058,12 @@
                                                   for="preferred_locale"
                                                   >Preferred language</label
                                                 >
-                                                <div class="_wlf6154">
+                                                <div class="select-option__container">
                                                   <div class="overflow-hidden">
                                                     <select
                                                       id="preferred_locale"
                                                       name="preferred_locale"
-                                                      class="_1w9nn735"
+                                                      class="select-option__container-select"
                                                     >
                                                       <option
                                                         disabled=""
@@ -2256,7 +2256,7 @@
                                                       </option>
                                                     </select>
                                                   </div>
-                                                  <span class="_1idvclr"
+                                                  <span class="select-option__container-select-icon"
                                                     ><svg
                                                       viewBox="0 0 18 18"
                                                       role="presentation"
@@ -2366,12 +2366,12 @@
                                                   for="native_currency"
                                                   >Preferred currency</label
                                                 >
-                                                <div class="_wlf6154">
+                                                <div class="select-option__container">
                                                   <div class="overflow-hidden">
                                                     <select
                                                       id="native_currency"
                                                       name="native_currency"
-                                                      class="_1w9nn735"
+                                                      class="select-option__container-select"
                                                     >
                                                       <option
                                                         disabled=""
@@ -2498,7 +2498,7 @@
                                                       </option>
                                                     </select>
                                                   </div>
-                                                  <span class="_1idvclr"
+                                                  <span class="select-option__container-select-icon"
                                                     ><svg
                                                       viewBox="0 0 18 18"
                                                       role="presentation"
@@ -2608,12 +2608,12 @@
                                                   for="timezone"
                                                   >Time zone</label
                                                 >
-                                                <div class="_wlf6154">
+                                                <div class="select-option__container">
                                                   <div class="overflow-hidden">
                                                     <select
                                                       id="timezone"
                                                       name="timezone"
-                                                      class="_1w9nn735"
+                                                      class="select-option__container-select"
                                                     >
                                                       <option
                                                         disabled=""
@@ -3265,7 +3265,7 @@
                                                       </option>
                                                     </select>
                                                   </div>
-                                                  <span class="_1idvclr"
+                                                  <span class="select-option__container-select-icon"
                                                     ><svg
                                                       viewBox="0 0 18 18"
                                                       role="presentation"
