--- a/welcome_back.html
+++ b/welcome_back.html
@@ -183,14 +183,14 @@
                     </div>
                     <main id="site-content">
                       <div class="tab__content-visibility">
-                        <div class="_qrzeuh" role="group">
-                          <div class="_1y9y8er">
+                        <div class="auth-container" role="group">
+                          <div class="auth-container__wrapper">
                             <header
                               id="panel-header"
                               data-testid="panel-header"
-                              class="_fmle54"
+                              class="auth-container__header"
                             >
-                              <div class="_2ftibv"></div>
+                              <div class="auth-container__header-spacer"></div>
                               <section>
                                 <h2
                                   tabindex="-1"
@@ -202,9 +202,9 @@
                                   </div>
                                 </h2>
                               </section>
-                              <div class="_2ftibv"></div>
+                              <div class="auth-container__header-spacer"></div>
                             </header>
-                            <div class="_7lvai1" aria-labelledby="panel-header">
+                            <div class="auth-container__panel-header" aria-labelledby="panel-header">
                               <div class="user-info">
                                 <div class="user-profile">
                                   <img
@@ -342,11 +342,11 @@
                                           class="input-field"
                                           for="email-signup-password"
                                         >
-                                          <div class="_1jn0ze9">
+                                          <div class="auth-container__form-label">
                                             <div class="spinner-chart__input-title-text">Password</div>
                                           </div>
                                           <div dir="ltr">
-                                            <div class="_js9i23">
+                                            <div class="auth-container__form-field-wrapper">
                                               <input
                                                 name="user[password]"
                                                 placeholder="Password"
